@@ -8,6 +8,7 @@ import net.william278.huskhomes.util.Permission;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class TpAllCommand extends CommandBase {
 
@@ -19,14 +20,14 @@ public class TpAllCommand extends CommandBase {
     public void onExecute(@NotNull OnlineUser onlineUser, @NotNull String[] args) {
         if (args.length != 0) {
             plugin.getLocales().getLocale("error_invalid_syntax", "/tpaall")
-                    .ifPresent(onlineUser::sendMessage);
+                .ifPresent(onlineUser::sendMessage);
             return;
         }
 
         // Determine players to teleport and teleport them
         plugin.getCache().updatePlayerListCache(plugin, onlineUser).thenAccept(fetchedPlayers -> {
             final List<String> players = fetchedPlayers.stream()
-                    .filter(userName -> !userName.equalsIgnoreCase(onlineUser.username)).toList();
+                .filter(userName -> !userName.equalsIgnoreCase(onlineUser.username)).collect(Collectors.toList());
             if (players.isEmpty()) {
                 plugin.getLocales().getLocale("error_no_players_online").ifPresent(onlineUser::sendMessage);
                 return;
@@ -34,15 +35,15 @@ public class TpAllCommand extends CommandBase {
 
             // Send a message
             plugin.getLocales().getLocale("teleporting_all_players", Integer.toString(players.size()))
-                    .ifPresent(onlineUser::sendMessage);
+                .ifPresent(onlineUser::sendMessage);
 
             // Teleport every player
             final Position targetPosition = onlineUser.getPosition();
             players.forEach(playerName -> Teleport.builder(plugin, onlineUser)
-                    .setTeleporter(playerName)
-                    .setTarget(targetPosition)
-                    .toTeleport()
-                    .thenAccept(Teleport::execute));
+                .setTeleporter(playerName)
+                .setTarget(targetPosition)
+                .toTeleport()
+                .thenAccept(Teleport::execute));
         });
 
     }
