@@ -10,6 +10,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 public class TpaAllCommand extends CommandBase {
 
@@ -21,20 +22,20 @@ public class TpaAllCommand extends CommandBase {
     public void onExecute(@NotNull OnlineUser onlineUser, @NotNull String[] args) {
         if (plugin.getRequestManager().isIgnoringRequests(onlineUser)) {
             plugin.getLocales().getLocale("error_ignoring_teleport_requests")
-                    .ifPresent(onlineUser::sendMessage);
+                .ifPresent(onlineUser::sendMessage);
             return;
         }
 
         if (args.length != 0) {
             plugin.getLocales().getLocale("error_invalid_syntax", "/tpaall")
-                    .ifPresent(onlineUser::sendMessage);
+                .ifPresent(onlineUser::sendMessage);
             return;
         }
 
         // Determine players to teleport and teleport them
         plugin.getCache().updatePlayerListCache(plugin, onlineUser).thenAccept(playerList -> {
             final List<String> players = plugin.getCache().players.stream()
-                    .filter(userName -> !userName.equalsIgnoreCase(onlineUser.username)).toList();
+                .filter(userName -> !userName.equalsIgnoreCase(onlineUser.username)).collect(Collectors.toList());
             if (players.isEmpty()) {
                 plugin.getLocales().getLocale("error_no_players_online").ifPresent(onlineUser::sendMessage);
                 return;
@@ -44,18 +45,18 @@ public class TpaAllCommand extends CommandBase {
             final AtomicInteger counter = new AtomicInteger(0);
             final List<CompletableFuture<Void>> sentRequestsFuture = new ArrayList<>();
             players.forEach(playerName -> sentRequestsFuture.add(plugin.getRequestManager()
-                    .sendTeleportRequest(onlineUser, playerName, TeleportRequest.RequestType.TPA_HERE)
-                    .thenAccept(sent -> counter.addAndGet(sent.isPresent() ? 1 : 0))));
+                .sendTeleportRequest(onlineUser, playerName, TeleportRequest.RequestType.TPA_HERE)
+                .thenAccept(sent -> counter.addAndGet(sent.isPresent() ? 1 : 0))));
 
             // Send a message when all requests have been sent
             CompletableFuture.allOf(sentRequestsFuture.toArray(new CompletableFuture[0])).thenRun(() -> {
                 if (counter.get() == 0) {
                     plugin.getLocales().getLocale("error_no_players_online")
-                            .ifPresent(onlineUser::sendMessage);
+                        .ifPresent(onlineUser::sendMessage);
                     return;
                 }
                 plugin.getLocales().getLocale("tpaall_request_sent", Integer.toString(counter.get()))
-                        .ifPresent(onlineUser::sendMessage);
+                    .ifPresent(onlineUser::sendMessage);
             });
         });
     }
